--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
             name="viewModel"
-            type="ru.awawa.weatherapp.ui.CurrentWeatherViewModel" />
+            type="ru.awawa.weatherapp.ui.main.CurrentWeatherViewModel" />
+        <variable
+            name="buttonClickListener"
+            type="android.view.View.OnClickListener" />
     </data>
     <LinearLayout
         xmlns:tools="http://schemas.android.com/tools"
@@ -12,7 +16,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
-        tools:context=".ui.MainActivity">
+        tools:context=".ui.main.MainActivity">
 
         <TextView
             android:layout_width="match_parent"
@@ -54,7 +58,8 @@
             android:id="@+id/btSearch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/search_city"/>
+            android:text="@string/search_city"
+            app:clickListener="@{buttonClickListener}"/>
 
     </LinearLayout>
 </layout>
