--- a/app/src/main/res/layout/fragment_search_layout.xml
+++ b/app/src/main/res/layout/fragment_search_layout.xml
@@ -6,13 +6,13 @@
     <data>
         <variable
             name="viewModel"
-            type="ru.awawa.weatherapp.ui.search.SearchViewModel" />
+            type="ru.awawa.weatherapp.ui.main.search.SearchViewModel" />
         <variable
             name="searchListener"
             type="androidx.appcompat.widget.SearchView.OnQueryTextListener" />
         <variable
             name="listViewAdapter"
-            type="ru.awawa.weatherapp.ui.search.SearchAdapter" />
+            type="ru.awawa.weatherapp.ui.main.search.SearchAdapter" />
     </data>
     <LinearLayout
         android:layout_width="match_parent"
