--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -2,4 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/nav_currentWeather"
         android:title="@string/currentWeather"/>
+    <item android:id="@+id/nav_search"
+        android:title="@string/search"/>
 </menu>
