--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -9,4 +9,7 @@
         android:name="ru.awawa.weatherapp.ui.main.current.CurrentWeather"
         tools:layout="@layout/fragment_main_layout"/>
 
+    <fragment android:id="@+id/nav_search"
+        android:name="ru.awawa.weatherapp.ui.main.search.SearchFragment"
+        tools:layout="@layout/fragment_search_layout"/>
 </navigation>
