Added ProgressBar placeholder to show while weather is being loaded

--- a/app/src/main/res/layout/fragment_main_layout.xml
+++ b/app/src/main/res/layout/fragment_main_layout.xml
@@ -11,47 +11,62 @@
             type="android.view.View.OnClickListener" />
     </data>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_height="match_parent"
         android:gravity="center">
 
-        <TextView
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:visibility="@{viewModel.currentWeather}"
+            android:layout_centerInParent="true"/>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:padding="5dp"
-            android:textSize="18sp"
-            android:textColor="@android:color/black"
-            android:text="@{viewModel.currentWeather.cityName}"/>
+            android:layout_centerInParent="true"
+            android:orientation="vertical"
+            app:visibility="@{viewModel.currentWeather}"
+            android:gravity="center">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:padding="5dp"
-            android:textSize="18sp"
-            android:textColor="@android:color/black"
-            android:text='@{"Latitude: " + Float.toString(viewModel.currentWeather.coordinates.latitude) + " Longitude: " + Float.toString(viewModel.currentWeather.coordinates.longitude)}' />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:padding="5dp"
+                android:textSize="18sp"
+                android:textColor="@android:color/black"
+                android:text="@{viewModel.currentWeather.cityName}"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:padding="5dp"
-            android:textSize="18sp"
-            android:textColor="@android:color/black"
-            android:text='@{String.format("Temperature: %.2f°C", viewModel.currentWeather.mainData.temperature - 273)}'/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:padding="5dp"
+                android:textSize="18sp"
+                android:textColor="@android:color/black"
+                android:text='@{"Latitude: " + Float.toString(viewModel.currentWeather.coordinates.latitude) + " Longitude: " + Float.toString(viewModel.currentWeather.coordinates.longitude)}' />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:textAlignment="center"
-            android:textSize="18sp"
-            android:textColor="@android:color/black"
-            android:text='@{String.format("Min temperature: %.2f°C Max temperature: %.2f°C", viewModel.currentWeather.mainData.minTemperature - 273, viewModel.currentWeather.mainData.maxTemperature - 273)}'/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:padding="5dp"
+                android:textSize="18sp"
+                android:textColor="@android:color/black"
+                android:text='@{String.format("Temperature: %.2f°C", viewModel.currentWeather.mainData.temperature - 273)}'/>
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                android:textColor="@android:color/black"
+                android:text='@{String.format("Min temperature: %.2f°C Max temperature: %.2f°C", viewModel.currentWeather.mainData.minTemperature - 273, viewModel.currentWeather.mainData.maxTemperature - 273)}'/>
+
+        </LinearLayout>
+    </RelativeLayout>
 </layout>
