--- a/app/src/main/res/layout/fragment_main_layout.xml
+++ b/app/src/main/res/layout/fragment_main_layout.xml
@@ -13,8 +13,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center">
+        android:layout_height="match_parent">
 
 
         <ProgressBar
@@ -23,55 +22,70 @@
             app:visibility="@{viewModel.weatherRepo.oneCallModel}"
             android:layout_centerInParent="true"/>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:orientation="vertical"
+            android:layout_alignParentTop="true"
             app:visibility="@{viewModel.weatherRepo.oneCallModel}"
             android:gravity="center">
 
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/tvCityName"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:padding="5dp"
+                android:paddingVertical="15dp"
                 android:textSize="18sp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
                 android:textColor="@android:color/black"
                 android:text="@{viewModel.weatherRepo.city.name}"/>
 
             <ImageView
+                android:id="@+id/weatherImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:url='@{String.format("http://openweathermap.org/img/wn/%s@2x.png",viewModel.weatherRepo.oneCallModel.current.weather[0].icon)}'/>
+                android:layout_alignTop="@id/tvCityName"
+                android:layout_alignBottom="@id/tvCityName"
+                android:layout_toRightOf="@id/tvCityName"
+                app:url='@{String.format("https://openweathermap.org/img/wn/%s@2x.png",viewModel.weatherRepo.oneCallModel.current.weather[0].icon)}'/>
 
             <TextView
+                android:id="@+id/tvCoordinates"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:padding="5dp"
                 android:textSize="18sp"
                 android:textColor="@android:color/black"
+                android:layout_below="@id/tvCityName"
+                android:layout_centerHorizontal="true"
                 android:text='@{"Latitude: " + Float.toString(viewModel.weatherRepo.city.lat) + " Longitude: " + Float.toString(viewModel.weatherRepo.city.lon)}' />
 
             <TextView
+                android:id="@+id/tvTemperature"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:padding="5dp"
                 android:textSize="18sp"
                 android:textColor="@android:color/black"
+                android:layout_below="@id/tvCoordinates"
+                android:layout_centerHorizontal="true"
                 android:text='@{String.format("Temperature: %.2f°C", viewModel.weatherRepo.oneCallModel.current.temperature - 273)}'/>
 
             <TextView
+                android:id="@+id/tvFeelsLike"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
                 android:textAlignment="center"
                 android:textSize="18sp"
                 android:textColor="@android:color/black"
+                android:layout_below="@id/tvTemperature"
+                android:layout_centerHorizontal="true"
                 android:text='@{String.format("Feels like: %.2f°C", viewModel.weatherRepo.oneCallModel.current.feelsLike - 273)}'/>
 
-        </LinearLayout>
+        </RelativeLayout>
     </RelativeLayout>
 </layout>
