--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#03c2fc</color>
+    <color name="colorPrimaryDark">#078db5</color>
+    <color name="colorAccent">#075eb5</color>
+
+    <color name="toolbarTitleColor">#f2f2f2</color>
+    <color name="backgroundColor">#c7e1eb</color>
 </resources>
