--- a/app/src/main/res/layout/fragment_search_layout.xml
+++ b/app/src/main/res/layout/fragment_search_layout.xml
@@ -17,13 +17,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/background">
         <androidx.appcompat.widget.SearchView
             android:id="@+id/search"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:queryTextListener="@{searchListener}">
+            app:queryTextListener="@{searchListener}"
+            app:iconifiedByDefault="false">
         </androidx.appcompat.widget.SearchView>
 
         <ListView
@@ -31,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cities="@{viewModel.cities}"
-            app:adapter="@{listViewAdapter}"/>
+            app:adapter="@{listViewAdapter}"
+            android:background="@android:color/transparent"/>
     </LinearLayout>
 </layout>
