--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item android:id="@+id/nav_currentWeather"
         android:title="@string/currentWeather"/>
+
+    <item android:id="@+id/nav_two_days"
+        android:title="@string/twoDaysWeather"/>
+
     <item android:id="@+id/nav_search"
         android:title="@string/search"/>
+
 </menu>
