--- a/app/src/main/res/layout/layout_hourly_row.xml
+++ b/app/src/main/res/layout/layout_hourly_row.xml
@@ -1,13 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
-            name="hourlyModel"
-            type="ru.awawa.weatherapp.repo.retrofit.models.onecall.HourlyModel" />
+            name="time"
+            type="String" />
+        <variable
+            name="temperature"
+            type="String" />
+        <variable
+            name="image"
+            type="String" />
     </data>
-    <LinearLayout
-        android:orientation="vertical" android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tvTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/textColor"
+            android:textSize="16sp"
+            android:paddingHorizontal="5dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:text='@{time}'/>
+
+        <ImageView
+            android:id="@+id/imgIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/tvTime"
+            android:paddingHorizontal="5dp"
+            android:layout_centerVertical="true"
+            app:image='@{String.format("https://openweathermap.org/img/wn/%s@2x.png",image)}'/>
+
+        <TextView
+            android:id="@+id/tvTemperature"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/textColor"
+            android:layout_centerVertical="true"
+            android:textSize="16sp"
+            android:layout_toEndOf="@id/imgIcon"
+            android:paddingHorizontal="5dp"
+            android:text='@{temperature}'/>
+
+    </RelativeLayout>
 </layout>
