--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -10,4 +10,7 @@
     <item android:id="@+id/nav_search"
         android:title="@string/search"/>
 
+    <item android:id="@+id/nav_seven_days"
+        android:title="@string/sevenDaysWeather"/>
+
 </menu>
