--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -20,4 +20,9 @@
         android:label="@string/twoDaysWeather"
         tools:layout="@layout/fragment_two_days_layout"/>
 
+    <fragment android:id="@+id/nav_seven_days"
+        android:name="ru.awawa.weatherapp.ui.main.daily.SevenDaysWeatherFragment"
+        android:label="@string/sevenDaysWeather"
+        tools:layout="@layout/fragment_seven_days_layout"/>
+
 </navigation>
