--- a/app/src/main/res/layout/layout_hourly_row.xml
+++ b/app/src/main/res/layout/layout_hourly_row.xml
@@ -64,216 +64,122 @@
 
             <LinearLayout
                 android:id="@+id/llTemperature"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
+                style="@style/RowLinearLayout"
                 android:layout_toEndOf="@id/imgIcon"
-                android:gravity="center"
-                android:paddingHorizontal="5dp"
-                android:layout_centerVertical="true">
+                android:paddingHorizontal="5dp">
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/temperature"
-                    android:textColor="@color/textColor"
-                    android:textAlignment="center"
-                    android:textSize="12sp"/>
+                    style="@style/RowTextViewTitle"
+                    android:text="@string/temperature" />
 
                 <TextView
                     android:id="@+id/tvTemperature"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/textColor"
-                    android:textAlignment="center"
-                    android:textSize="16sp"
+                    style="@style/RowTextViewContent"
                     android:text='@{temperature}'/>
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/llFeelsLike"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:paddingHorizontal="5dp"
-                android:gravity="center"
+                style="@style/RowLinearLayout"
                 android:layout_toEndOf="@id/llTemperature"
-                android:layout_centerVertical="true">
+                android:paddingHorizontal="5dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/feelsLike"
-                    android:textAlignment="center"
-                    android:textColor="@color/textColor"
-                    android:textSize="12sp"/>
+                    style="@style/RowTextViewTitle"
+                    android:text="@string/feelsLike" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/textColor"
-                    android:textAlignment="center"
-                    android:textSize="16sp"
+                    style="@style/RowTextViewContent"
                     android:text="@{feelsLike}"/>
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/llHumidity"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:paddingHorizontal="5dp"
+                style="@style/RowLinearLayout"
                 android:layout_toEndOf="@id/llFeelsLike"
-                android:layout_centerVertical="true">
+                android:paddingHorizontal="5dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/humidity"
-                    android:textColor="@color/textColor"
-                    android:textAlignment="center"
-                    android:textSize="12sp"/>
+                    style="@style/RowTextViewTitle"
+                    android:text="@string/humidity" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/textColor"
-                    android:textAlignment="center"
-                    android:textSize="16sp"
+                    style="@style/RowTextViewContent"
                     android:text="@{humidity}"/>
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/llPressure"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:paddingHorizontal="5dp"
+                style="@style/RowLinearLayout"
                 android:layout_toEndOf="@id/llHumidity"
-                android:layout_centerVertical="true">
+                android:paddingHorizontal="5dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/pressure"
-                    android:textColor="@color/textColor"
-                    android:textAlignment="center"
-                    android:textSize="12sp"/>
+                    style="@style/RowTextViewTitle"
+                    android:text="@string/pressure" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/textColor"
-                    android:textAlignment="center"
-                    android:textSize="16sp"
+                    style="@style/RowTextViewContent"
                     android:text="@{pressure}"/>
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/llDewPoint"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:paddingHorizontal="5dp"
+                style="@style/RowLinearLayout"
                 android:layout_toEndOf="@id/llPressure"
-                android:layout_centerVertical="true">
+                android:paddingHorizontal="5dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/dewPoint"
-                    android:textColor="@color/textColor"
-                    android:textAlignment="center"
-                    android:textSize="12sp"/>
+                    style="@style/RowTextViewTitle"
+                    android:text="@string/dewPoint" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/textColor"
-                    android:textAlignment="center"
-                    android:textSize="16sp"
+                    style="@style/RowTextViewContent"
                     android:text="@{dewPoint}"/>
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/llClouds"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center"
+                style="@style/RowLinearLayout"
                 android:paddingHorizontal="5dp"
-                android:layout_toEndOf="@id/llDewPoint"
-                android:layout_centerVertical="true">
+                android:layout_toEndOf="@id/llDewPoint">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/clouds"
-                    android:textColor="@color/textColor"
-                    android:textAlignment="center"
-                    android:textSize="12sp"/>
+                    style="@style/RowTextViewTitle"
+                    android:text="@string/clouds" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/textColor"
-                    android:textAlignment="center"
-                    android:textSize="16sp"
+                    style="@style/RowTextViewContent"
                     android:text="@{clouds}"/>
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/llWindSpeed"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:paddingHorizontal="5dp"
+                style="@style/RowLinearLayout"
                 android:layout_toEndOf="@+id/llClouds"
-                android:layout_centerVertical="true">
+                android:paddingHorizontal="5dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/windSpeed"
-                    android:textColor="@color/textColor"
-                    android:textAlignment="center"
-                    android:textSize="12sp"/>
+                    style="@style/RowTextViewTitle"
+                    android:text="@string/windSpeed" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/textColor"
-                    android:textSize="16sp"
+                    style="@style/RowTextViewContent"
                     android:text="@{windSpeed}"/>
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/llWindDirection"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:paddingHorizontal="5dp"
+                style="@style/RowLinearLayout"
                 android:layout_toEndOf="@id/llWindSpeed"
-                android:layout_centerVertical="true">
+                android:paddingHorizontal="5dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/windDirection"
-                    android:textColor="@color/textColor"
-                    android:textAlignment="center"
-                    android:textSize="12sp"/>
+                    style="@style/RowTextViewTitle"
+                    android:text="@string/windDirection" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/textColor"
-                    android:textSize="16sp"
+                    style="@style/RowTextViewContent"
                     android:text="@{windDirection}"/>
             </LinearLayout>
 
